test/spec_vectors/memory64/fail/module_12.wat
(module (func (drop (f32.load (i64.const 0)))))